Revision history for Perl extension HTTP::Proxy

0.12
        [ENHANCEMENTS]
        - send the error message to the client when the Proxy agent dies
          (usually because of a filter error)
        [FIXES]
        - do not block simultaneous connections when not forking
        - clean up the filter chain after the body-request filters
        - ensure the filter stack is reinitialised between requests
        [TESTS]
        - test the proxy against http://diveintomark.org/tests/client/http/
        [EXAMPLES]
        - eg/post.pl   - outputs the URI and parameters of all POST requests
        - eg/logger.pl - outputs details of GET and POST requests

0.11  Fri Jan  2 17:02:08 CET 2004
        [ENHANCEMENTS]
        - setting maxchild to 0 prevents forking (Jim Cromie)
        - filters can now match on the query string
        - hop-by-hop headers and Max-Forwards headers are correctly supported
        - new mutators added to HTTP::Proxy: via, hop_headers, request,
          response
        - filters can now answer in place of the server, which allows
          for authorisation filters, cache (?) filters, etc.
        - new examples scripts: proxy-auth.pl
        [FIXES]
        - push_filter() now correctly supports several match criteria
        [TESTS]
        - all the Via: header tests are now in t/50via.t
        - t/50standard.t now checks headers for several request types
        - new tests:
          + t/51simple2.t - check response header filters with an actual proxy
          + t/61simple2.t - check response body filters with an actual proxy
        [INTERNALS]
        - new method _send_response_headers

0.10  Wed Nov 19 01:36:59 CET 2003

        *** MAJOR INTERFACE CHANGES ***

        - new base classes HTTP::Proxy::HeaderFilter and
          HTTP::Proxy::BodyFilter
        - some useful built-in filter classes:
          HTTP::Proxy::BodyFilter::htmlparser
          HTTP::Proxy::BodyFilter::htmltext