@@ -1,5 +1,5 @@
 use strict;
-use Test::More tests => 8;
+use Test::More tests => 9;
 use LWP::UserAgent;
 use HTTP::Proxy;
 use t::Utils;    # some helper functions for the server
@@ -15,7 +15,7 @@ $test->no_ending(1);
 my $server = server_start();
 
 # create and fork the proxy
-my $proxy = HTTP::Proxy->new( port => 0, maxconn => 4 );
+my $proxy = HTTP::Proxy->new( port => 0, maxconn => 5 );
 $proxy->init;    # required to access the url later
 $proxy->agent->no_proxy( URI->new( $server->url )->host );
 push @pids, fork_proxy($proxy);
@@ -25,9 +25,31 @@ my $pid = fork;
 die "Unable to fork web server" if not defined $pid;
 
 if ( $pid == 0 ) {
+    my $res = HTTP::Response->new(
+        200, 'OK',
+        HTTP::Headers->new( 'Content-Type' => 'text/plain' ),
+        "Here is some data."
+    );
 
     # let's return some files when asked for them
     server_next($server) for 1 .. 3;
+    server_next($server,
+        sub {
+            my $req = shift;
+            is( $req->header("X-Forwarded-For"), '127.0.0.1',
+                "The daemon got X-Forwarded-For" );
+            return $res;
+        }
+    );
+    server_next( $server, 
+        sub {
+            my $req = shift;
+            is( $req->header("X-Forwarded-For"), undef,
+                "The daemon didn't get X-Forwarded-For" );
+            return $res;
+        }
+    );
+
     exit 0;
 }
 
@@ -92,6 +114,21 @@ is( scalar @client, 0, "No Client-* headers sent by the proxy" );
 
 # close the connection to the proxy
 close $sock or diag "close: $!";
+
+# X-Forwarded-For (test in the server)
+$req = HTTP::Request->new( HEAD => $server->url . "x-forwarded-for" );
+$res = $ua->simple_request($req);
+
+# yet another proxy
+$proxy = HTTP::Proxy->new( port => 0, maxconn => 1, x_forwarded_for => 0 );
+$proxy->init;    # required to access the url later
+$proxy->agent->no_proxy( URI->new( $server->url )->host );
+push @pids, fork_proxy($proxy);
+
+# X-Forwarded-For (test in the server)
+$ua->proxy( http => $proxy->url );
+$req = HTTP::Request->new( HEAD => $server->url . "x-forwarded-for" );
+$res = $ua->simple_request($req);
 
 # make sure both kids are dead
 wait for @pids;
